# image-gen-test-tool

./: .gitignore  README.md  README.zh-CN.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
adapters/: __init__.py  alibaba.py  base.py  glm.py  google.py
core/: __init__.py  io_utils.py  models.py  runner.py
core/services/: __init__.py  catalog.py  generation.py  history.py
docs/build-scripts/: BUILD_REPORT.md  BUILD_SUCCESS.md  ORGANIZATION.md  QUICKSTART.md  README.md  build_windows.bat  package_release.bat  test_build.bat
docs/guides/: quick-start-windows.txt
image-gen-test-tool-windows-v0.1.0/: .env.example  QUICKSTART.txt
image-gen-test-tool-windows-v0.1.0/_internal/: custom_models.json  extra.example.json  prompts.txt
image-gen-test-tool-windows-v0.1.0/_internal/textual-8.0.0.dist-info/: METADATA  RECORD
image-gen-test-tool-windows-v0.1.0/docs/: AGENTS.md  BUILD_WINDOWS.md  CHANGELOG.md  tui-gui-roadmap.md
image-gen-test-tool-windows-v0.1.0/docs/guides/: windows-build-summary.txt  windows-release-checklist.md
tests/: test_alibaba_adapter.py  test_cli_compare_targets.py  test_cli_history.py  test_cli_models_catalog.py  test_cli_negative_prompt.py  test_cli_preprocessed_persist.py  test_generation_autocrop.py  test_glm_adapter.py  test_google_adapter.py  test_models.py  test_runner.py  test_services_catalog.py  test_services_catalog_custom.py  test_services_history.py  test_size_inference.py
ui/: __init__.py
ui/tui/: __init__.py  app.py  main.py
